fix overflow on logs tab

--- a/src/components/tabLayout/EditorTabLayout.module.scss
+++ b/src/components/tabLayout/EditorTabLayout.module.scss
@@ -56,4 +56,5 @@
 
 .content {
   flex-grow: 1;
+  overflow-y: auto;
 }
